--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-bootsplash": "^5.0.2",
     "react-native-device-info": "^10.8.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-safe-area-context": "^4.7.1",
